--- a/src/pages/StaffListPage/StaffListPage.scss
+++ b/src/pages/StaffListPage/StaffListPage.scss
@@ -6,4 +6,16 @@
     margin: 0;
     margin-bottom: 40px;
   }
+
+  &__content {
+    display: flex;
+    flex-direction: column;
+    flex-flow: row wrap;
+    justify-content: space-between;
+
+    &::after {
+      content: '';
+      flex: auto;
+    }
+  }
 }
