--- a/src/pages/EmployeePage/EmployeePage.scss
+++ b/src/pages/EmployeePage/EmployeePage.scss
@@ -7,14 +7,15 @@
   &__content {
     display: flex;
 
+    align-items: stretch;
+
     width: 1000px;
-    height: 600px;
+    height: 610px;
     overflow: hidden;
   }
 
   &__image {
     width: 300px;
-    height: 100%;
     object-fit: cover;
   }
 
@@ -31,13 +32,13 @@
 
   &__comments {
     &-title {
-      font-size: 30px;
+      font-size: 20px;
     }
   }
 
-  &__link {
-    text-align: center;
+  &__button {
     font-weight: bold;
+    text-transform: uppercase;
   }
 }
 
