--- a/src/index.scss
+++ b/src/index.scss
@@ -104,54 +104,22 @@ h6 {
       margin-bottom: 40px;
     }
   }
-}
 
-/* Buttons */
+  &r {
+    &10 {
+      margin-right: 20px;
+    }
 
-.button {
-  display: inline-block;
+    &20 {
+      margin-right: 20px;
+    }
 
-  line-height: 40px;
+    &30 {
+      margin-right: 30px;
+    }
 
-  padding: 0 10px;
-
-  border: none;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-
-  height: 40px;
-
-  cursor: pointer;
-
-  transition: 0.2s ease-in;
-
-  &:hover {
-    background-color: $dark;
-
-    color: #fff;
-  }
-}
-
-/* Inputs */
-.input {
-  border: none;
-  border-bottom: 1px solid #ccc;
-
-  padding: 0 10px;
-
-  height: 40px;
-
-  outline: transparent;
-
-  font-size: 20px;
-
-  margin-bottom: 5px;
-
-  &::placeholder {
-    color: #b1b0b0;
-  }
-
-  &.error {
-    border-bottom: 1px solid tomato;
+    &40 {
+      margin-right: 40px;
+    }
   }
 }
