--- a/src/pages/EmployeePage/EmployeePage.scss
+++ b/src/pages/EmployeePage/EmployeePage.scss
@@ -37,14 +37,7 @@
   }
 
   &__button {
-    font-weight: bold;
+    // font-weight: bold;
     text-transform: uppercase;
   }
-}
-
-.comments {
-  padding: 10px 0;
-  height: 250px;
-
-  overflow-y: scroll;
 }
