--- a/src/components/FormikInput/FormikInput.scss
+++ b/src/components/FormikInput/FormikInput.scss
@@ -8,3 +8,27 @@
     margin-left: 10px;
   }
 }
+
+
+.input {
+  border: none;
+  border-bottom: 1px solid #ccc;
+
+  padding: 0 10px;
+
+  height: 40px;
+
+  outline: transparent;
+
+  font-size: 16px;
+
+  margin-bottom: 5px;
+
+  &::placeholder {
+    color: #b1b0b0;
+  }
+
+  &.error {
+    border-bottom: 1px solid tomato;
+  }
+}
