--- a/src/index.scss
+++ b/src/index.scss
@@ -1,8 +1,8 @@
-@import 'constants/colors.scss';
+@import "constants/colors.scss";
 
 * {
   box-sizing: border-box;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   color: $dark;
   letter-spacing: 0.03em;
 }
@@ -89,7 +89,7 @@ h6 {
 
   &b {
     &10 {
-      margin-bottom: 20px;
+      margin-bottom: 10px;
     }
 
     &20 {
