--- a/src/pages/EmployeePage/EmployeePage.scss
+++ b/src/pages/EmployeePage/EmployeePage.scss
@@ -1,16 +1,21 @@
-@import 'constants/colors.scss';
+@import "constants/colors.scss";
 
 .employee-page {
   width: 100%;
-  height: 100vh;
+
+  &__wrapper {
+    padding: 50px 0;
+  }
 
   &__content {
+    position: relative;
+
     display: flex;
 
     align-items: stretch;
 
     width: 1000px;
-    height: 610px;
+    height: 520px;
     overflow: hidden;
   }
 
@@ -37,7 +42,14 @@
   }
 
   &__button {
-    // font-weight: bold;
     text-transform: uppercase;
+  }
+
+  &__link {
+    position: absolute;
+    right: 30px;
+    top: 20px;
+    text-decoration: none;
+    font-size: 20px;
   }
 }
