--- a/src/pages/AddUserPage/AddUserPage.scss
+++ b/src/pages/AddUserPage/AddUserPage.scss
@@ -2,8 +2,9 @@
   padding: 100px 0;
 
   &__title {
-    font-size: 30;
+    font-size: 30px;
     text-align: center;
+    text-transform: uppercase;
   }
 
   &__content {
