--- a/src/pages/NotFountPage/NotFountPage.scss
+++ b/src/pages/NotFountPage/NotFountPage.scss
@@ -1,21 +1,18 @@
+@import "constants/colors.scss";
+
 .not-found-page {
   width: 100%;
   height: 100vh;
-
-  background: url('../../static/space.jpg') center no-repeat;
-  background-size: cover;
-  background-clip: text;
-  -webkit-background-clip: text;
-
   &__title {
     color: transparent;
-    font-size: 18vw;
+    font-size: 6vw;
     margin: 0;
     margin-bottom: 10px;
     font-weight: bold;
 
+    color: $dark;
+
     span {
-      color: transparent;
       display: block;
       text-align: center;
     }
