--- a/src/components/AddUser/AddUserRound/AddUserRound.scss
+++ b/src/components/AddUser/AddUserRound/AddUserRound.scss
@@ -4,7 +4,7 @@
   background-color: #ddd;
 
   &__image {
-    background: url("../../../static/add-user.svg") center no-repeat;
+    background: url('../../../static/add-user.svg') center no-repeat;
     background-size: contain;
 
     width: 50%;
